# PJA-ASI-14C-GR2

./: .dockerignore  .gitignore  Dockerfile  README.md  conda.yml  obesity_classifier.ipynb  packages.yml  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/base/: catalog.yml  parameters.yml  parameters_automl.yml  parameters_model_evaluation.yml
kedro-asi-14c-gr2/: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
kedro-asi-14c-gr2/conf/base/: catalog.yml
kedro-asi-14c-gr2/src/kedro_asi_14c_gr2/: __init__.py
kedro-asi-14c-gr2/src/kedro_asi_14c_gr2/pipelines/data_processing/: nodes.py  pipeline.py
src/: main.py
src/Data_collecting/: collect_data.py
src/Data_preparation/: obesity_level.csv  prepare_data.py
src/Data_validation/: validate_data.py
src/Model_creation/: create_model.py  obesity_classifier.joblib
src/Model_evaluation/: model_evaluation.py
src/Model_save/: model_save.py
src/api/: app.py  input.json
src/lab_1/: obesity_classifier.ipynb
src/lab_2/: main.py
wandb/: latest-run
wandb/run-20240420_121803-n0pqwo1n/: run-n0pqwo1n.wandb
wandb/run-20240420_123526-rzkp5co1/: run-rzkp5co1.wandb
wandb/run-20240420_123840-s1s2gjfl/: run-s1s2gjfl.wandb
wandb/run-20240420_124131-82orl7hy/: run-82orl7hy.wandb
wandb/run-20240420_124857-hd9kgjdq/: run-hd9kgjdq.wandb
wandb/run-20240420_125024-4g1q8yhn/: run-4g1q8yhn.wandb
wandb/run-20240420_125125-tztxxwyj/: run-tztxxwyj.wandb
wandb/run-20240420_125433-d64f4j30/: run-d64f4j30.wandb
wandb/run-20240420_131045-1zbg5eo9/: run-1zbg5eo9.wandb
(+112 files in other folders)
