[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "PJA-ASI-14C-GR2"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
PJA-ASI-14C-GR2 = "Kedro.__main__:main"

[tool.kedro]
package_name = "Kedro"
project_name = "PJA-ASI-14C-GR2"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "PJA-ASI-14C-GR2.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
