[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_asi_14c_gr2"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-asi-14c-gr2 = "kedro_asi_14c_gr2.__main__:main"

[tool.kedro]
package_name = "kedro_asi_14c_gr2"
project_name = "kedro-asi-14c-gr2"
kedro_init_version = "0.19.3"
tools = [ "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_asi_14c_gr2.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
